Etape 2 Faites vos jeux

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">tp-2-roll-dice-Norivio</string>
     <string name="roll">Roll</string>
+    <string name="entrez_le_chiffre">Entrez le chiffre</string>
 </resources>
